Retrieving data sucessfully

--- a/app/components/multi-line-chart.hbs
+++ b/app/components/multi-line-chart.hbs
@@ -1,5 +1,10 @@
-<h1>Multi-Line Chart demo in EmberJS</h1>
-<div>
-  <a href="https://observablehq.com/@d3/multi-line-chart">Source</a>
-</div>
+<div class="multi-line-chart" {{did-insert this.createChart}}>
+  <h1>Multi-Line Chart demo in EmberJS</h1>
+  <div>
+    <a href="https://observablehq.com/@d3/multi-line-chart">Source</a>
+  </div>
 
+  <div>
+
+  </div>
+</div>
