--- a/app/components/multi-line-chart.hbs
+++ b/app/components/multi-line-chart.hbs
@@ -1,4 +1,4 @@
-<div class="multi-line-chart" {{did-insert this.createChart}}>
+<div class="multi-line-chart" {{did-insert this.getDataAndLoadChart}}>
   <h1>Multi-Line Chart demo in EmberJS</h1>
   <div>
     <a href="https://observablehq.com/@d3/multi-line-chart">Source</a>
