--- a/app/components/simple-demo.hbs
+++ b/app/components/simple-demo.hbs
@@ -1,4 +1,5 @@
 <div class="simple-demo" {{did-insert this.getDataAndLoadChart}}>
   <h1>Multi-Line Chart demo in EmberJS</h1>
-  <svg id="simple-demo-container" height=200 width=450></svg>
+  <svg id="simple-demo-container" height={{this.chartHeight}} width={{this.chartWidth}}>
+  </svg>
 </div>
