Adding axis lines

--- a/app/components/simple-demo.hbs
+++ b/app/components/simple-demo.hbs
@@ -1,5 +1,4 @@
 <div class="simple-demo" {{did-insert this.getDataAndLoadChart}}>
-  <h1>Multi-Line Chart demo in EmberJS</h1>
-  <svg id="simple-demo-container" height={{this.chartHeight}} width={{this.chartWidth}}>
-  </svg>
+  <h1>Simple D3 demo in EmberJS</h1>
+  <div id="simple-demo-container" class="d3-graph"></div>
 </div>
