--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,11 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Noto Sans", "Ubuntu", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.42857142857143;
+}
 .d3-graph svg {
   background-color: #f5f2f0;
 }
