--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -9,3 +9,11 @@ body {
 .d3-graph svg {
   background-color: #f5f2f0;
 }
+
+.d3-graph .series-1 {
+  fill: black;
+}
+
+.d3-graph .series-2 {
+  fill: blue;
+}
