--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -17,3 +17,10 @@ body {
 .d3-graph .series-2 {
   fill: blue;
 }
+
+/* Style the lines by removing the fill and applying a stroke */
+.d3-graph .temperature-threshold-line {
+  fill: none;
+  stroke: red;
+  stroke-width: 1;
+}
