--- a/app/components/time-series-with-thresholds.hbs
+++ b/app/components/time-series-with-thresholds.hbs
@@ -1,4 +1,4 @@
-<div class="time-series-with-thresholds" {{did-insert this.getDataAndLoadChart}}>
+<div class="time-series-with-thresholds" {{did-insert this.loadChart}}>
   <h1>Multiple D3 time series with thresholds demo in EmberJS</h1>
   <div id="time-series-with-thresholds-container" class="d3-graph"></div>
 </div>
