--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -15,7 +15,7 @@ body {
 }
 
 .d3-graph .series-2 {
-  fill: blue;
+  fill: orange;
 }
 
 /* Style the lines by removing the fill and applying a stroke */
